chore: fix error

--- a/docs/document_loader.ipynb
+++ b/docs/document_loader.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -60,11 +60,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;33mWARNING:\u001b[0m Your active project does not match the quota project in your local Application Default Credentials file. This might result in unexpected quota issues.\n",
+      "\n",
+      "To update your Application Default Credentials quota project, use the `gcloud auth application-default set-quota-project` command.\n",
+      "Updated property [core/project].\n",
+      "Creating new Cloud SQL instance...\n"
+     ]
+    }
+   ],
    "source": [
     "#@markdown Please fill in the value below with your GCP project ID and then run the cell.\n",
     "\n",
@@ -87,7 +99,7 @@
     "assert instance_id, \"⚠️ Please provide the name of your instance\"\n",
     "\n",
     "# check if Cloud SQL instance exists in the provided region\n",
-    "database_version = !gcloud sql instances describe {instance_name} --format=\"value(databaseVersion)\"\n",
+    "database_version = !gcloud sql instances describe {instance_id} --format=\"value(databaseVersion)\"\n",
     "if database_version[0].startswith(\"MYSQL\"):\n",
     "  print(\"Found existing MySQL Cloud SQL Instance!\")\n",
     "else:\n",
@@ -142,11 +154,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'project_id' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m engine \u001b[38;5;241m=\u001b[39m MySQLEngine\u001b[38;5;241m.\u001b[39mfrom_instance(\n\u001b[0;32m----> 2\u001b[0m     project_id\u001b[38;5;241m=\u001b[39m\u001b[43mproject_id\u001b[49m, region\u001b[38;5;241m=\u001b[39mregion, instance\u001b[38;5;241m=\u001b[39minstance_id, database\u001b[38;5;241m=\u001b[39mdb_name\n\u001b[1;32m      3\u001b[0m )\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Create default table\u001b[39;00m\n\u001b[1;32m      5\u001b[0m table_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest-default\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;66;03m#@param {type:\"string\"}\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'project_id' is not defined"
+     ]
+    }
+   ],
    "source": [
     "engine = MySQLEngine.from_instance(\n",
     "    project_id=project_id, region=region, instance=instance_id, database=db_name\n",
