--- a/docs/document_loader.ipynb
+++ b/docs/document_loader.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -60,23 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1;33mWARNING:\u001b[0m Your active project does not match the quota project in your local Application Default Credentials file. This might result in unexpected quota issues.\n",
-      "\n",
-      "To update your Application Default Credentials quota project, use the `gcloud auth application-default set-quota-project` command.\n",
-      "Updated property [core/project].\n",
-      "Creating new Cloud SQL instance...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#@markdown Please fill in the value below with your GCP project ID and then run the cell.\n",
     "\n",
@@ -154,23 +142,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'project_id' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m engine \u001b[38;5;241m=\u001b[39m MySQLEngine\u001b[38;5;241m.\u001b[39mfrom_instance(\n\u001b[0;32m----> 2\u001b[0m     project_id\u001b[38;5;241m=\u001b[39m\u001b[43mproject_id\u001b[49m, region\u001b[38;5;241m=\u001b[39mregion, instance\u001b[38;5;241m=\u001b[39minstance_id, database\u001b[38;5;241m=\u001b[39mdb_name\n\u001b[1;32m      3\u001b[0m )\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Create default table\u001b[39;00m\n\u001b[1;32m      5\u001b[0m table_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest-default\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;66;03m#@param {type:\"string\"}\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'project_id' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "engine = MySQLEngine.from_instance(\n",
     "    project_id=project_id, region=region, instance=instance_id, database=db_name\n",
@@ -201,7 +177,11 @@
     "loader = MySQLLoader(engine=engine, table_name=table_name)\n",
     "\n",
     "# Save documents\n",
-    "saver.add_documents(test_docs)"
+    "saver.add_documents(test_docs)\n",
+    "with engine.connect() as conn:\n",
+    "    result = conn.execute(sqlalchemy.text(f\"select * from `{table_name}`;\"))\n",
+    "    print(result.keys())\n",
+    "    print(result.fetchall())"
    ]
   },
   {
@@ -213,17 +193,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded documents: [Document(page_content='Apple Granny Smith 150 0.99 1', metadata={'fruit_id': 1}), Document(page_content='Banana Cavendish 200 0.59 0', metadata={'fruit_id': 2}), Document(page_content='Orange Navel 80 1.29 1', metadata={'fruit_id': 3})]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "loader = MySQLLoader(engine=engine, table_name=table_name)\n",
     "docs = loader.load()\n",
@@ -239,17 +211,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded documents: [Document(page_content='Apple Granny Smith 150 0.99 1', metadata={'fruit_id': 1})]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "loader = MySQLLoader(engine=engine, query=f\"select * from `{table_name}` where JSON_EXTRACT(langchain_metadata, '$.fruit_id') = 1;\")\n",
     "docs = loader.load()\n",
@@ -272,17 +236,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Document(page_content='Granny Smith 150 0.99 1', metadata={'fruit_id': 1, 'fruit_name': 'Apple'}), Document(page_content='Cavendish 200 0.59 0', metadata={'fruit_id': 2, 'fruit_name': 'Banana'}), Document(page_content='Navel 80 1.29 1', metadata={'fruit_id': 3, 'fruit_name': 'Orange'})]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with engine.connect() as conn:\n",
     "    conn.execute(sqlalchemy.text(f\"DROP TABLE IF EXISTS `{table_name}`\"))\n",
@@ -337,18 +293,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unmatched ')' (1376673277.py, line 33)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[33], line 33\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(result))\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched ')'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with engine.connect() as conn:\n",
     "    conn.execute(sqlalchemy.text(f\"DROP TABLE IF EXISTS `{table_name}`\"))\n",
@@ -381,8 +328,9 @@
     "\n",
     "saver.add_documents(test_docs)\n",
     "with engine.connect() as conn:\n",
-    "    result = conn.execute(sqlalchemy.text(f\"select * from `{table_name}`;\")).fetchall()\n",
-    "    print(result)"
+    "    result = conn.execute(sqlalchemy.text(f\"select * from `{table_name}`;\"))\n",
+    "    print(result.keys())\n",
+    "    print(result.fetchall())"
    ]
   },
   {
