chore: refine doc

--- a/docs/document_loader.ipynb
+++ b/docs/document_loader.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -60,11 +60,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;33mWARNING:\u001b[0m Your active project does not match the quota project in your local Application Default Credentials file. This might result in unexpected quota issues.\n",
+      "\n",
+      "To update your Application Default Credentials quota project, use the `gcloud auth application-default set-quota-project` command.\n",
+      "Updated property [core/project].\n",
+      "Found existing MySQL Cloud SQL Instance!\n"
+     ]
+    }
+   ],
    "source": [
     "#@markdown Please fill in the value below with your GCP project ID and then run the cell.\n",
     "\n",
@@ -142,11 +154,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMKeyView(['page_content', 'langchain_metadata'])\n",
+      "[('Apple Granny Smith 150 0.99 1', '{\"fruit_id\": 1}'), ('Banana Cavendish 200 0.59 0', '{\"fruit_id\": 2}'), ('Orange Navel 80 1.29 1', '{\"fruit_id\": 3}')]\n"
+     ]
+    }
+   ],
    "source": [
     "engine = MySQLEngine.from_instance(\n",
     "    project_id=project_id, region=region, instance=instance_id, database=db_name\n",
@@ -174,7 +195,6 @@
     "    ),\n",
     "]\n",
     "saver = MySQLDocumentSaver(engine=engine, table_name=table_name)\n",
-    "loader = MySQLLoader(engine=engine, table_name=table_name)\n",
     "\n",
     "# Save documents\n",
     "saver.add_documents(test_docs)\n",
@@ -193,9 +213,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded documents: [Document(page_content='Apple Granny Smith 150 0.99 1', metadata={'fruit_id': 1}), Document(page_content='Banana Cavendish 200 0.59 0', metadata={'fruit_id': 2}), Document(page_content='Orange Navel 80 1.29 1', metadata={'fruit_id': 3})]\n"
+     ]
+    }
+   ],
    "source": [
     "loader = MySQLLoader(engine=engine, table_name=table_name)\n",
     "docs = loader.load()\n",
@@ -211,9 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded documents: [Document(page_content='Apple Granny Smith 150 0.99 1', metadata={'fruit_id': 1})]\n"
+     ]
+    }
+   ],
    "source": [
     "loader = MySQLLoader(engine=engine, query=f\"select * from `{table_name}` where JSON_EXTRACT(langchain_metadata, '$.fruit_id') = 1;\")\n",
     "docs = loader.load()\n",
@@ -236,9 +272,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Document(page_content='Granny Smith 150 0.99 1', metadata={'fruit_id': 1, 'fruit_name': 'Apple'}), Document(page_content='Cavendish 200 0.59 0', metadata={'fruit_id': 2, 'fruit_name': 'Banana'}), Document(page_content='Navel 80 1.29 1', metadata={'fruit_id': 3, 'fruit_name': 'Orange'})]\n"
+     ]
+    }
+   ],
    "source": [
     "with engine.connect() as conn:\n",
     "    conn.execute(sqlalchemy.text(f\"DROP TABLE IF EXISTS `{table_name}`\"))\n",
@@ -293,9 +337,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMKeyView(['page_content', 'fruit_name', 'organic', 'langchain_metadata'])\n",
+      "[('Granny Smith 150 0.99', 'Apple', 1, '{\"fruit_id\": 1}')]\n"
+     ]
+    }
+   ],
    "source": [
     "with engine.connect() as conn:\n",
     "    conn.execute(sqlalchemy.text(f\"DROP TABLE IF EXISTS `{table_name}`\"))\n",
@@ -337,36 +390,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Customize Connection & Authentication"
+    "### Delete documents in table with customized metadata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Documents before delete [Document(page_content='Granny Smith 150 0.99', metadata={'fruit_id': 1, 'fruit_name': 'Apple', 'organic': 1})]\n",
+      "Documents after delete []\n"
+     ]
+    }
+   ],
    "source": [
-    "from google.cloud.sql.connector import Connector\n",
-    "\n",
-    "instance_connection_name = \"langchain-cloud-sql-testing:us-central1:test-instance\"  #@param {type:\"string\"}\n",
-    "iam_database_user = \"loeng@google.com\"  #@param {type:\"string\"}\n",
-    "\n",
-    "def getconn() -> pymysql.Connection:\n",
-    "    conn = Connector().connect(  # type: ignore\n",
-    "        instance_connection_name,\n",
-    "        \"pymysql\",\n",
-    "        user=iam_database_user,\n",
-    "        db=db_name,\n",
-    "        enable_iam_auth=True,\n",
-    "    )\n",
-    "    return conn\n",
-    "\n",
-    "mysql_engine = sqlalchemy.create_engine(\n",
-    "    \"mysql+pymysql://\",\n",
-    "    creator=getconn,\n",
+    "loader = MySQLLoader(\n",
+    "    engine=engine,\n",
+    "    table_name=table_name,\n",
+    "    metadata_columns=[\"fruit_name\", \"organic\", \"langchain_metadata\"],\n",
     ")\n",
-    "\n",
-    "engine = MySQLEngine(engine=mysql_engine)"
+    "docs = loader.load()\n",
+    "print(\"Documents before delete:\", docs)\n",
+    "saver.delete(docs)\n",
+    "print(\"Documents after delete:\", loader.load())"
    ]
   }
  ],
