chore: refine doc

--- a/docs/document_loader.ipynb
+++ b/docs/document_loader.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -154,20 +154,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMKeyView(['page_content', 'langchain_metadata'])\n",
-      "[('Apple Granny Smith 150 0.99 1', '{\"fruit_id\": 1}'), ('Banana Cavendish 200 0.59 0', '{\"fruit_id\": 2}'), ('Orange Navel 80 1.29 1', '{\"fruit_id\": 3}')]\n"
-     ]
-    }
-   ],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "engine = MySQLEngine.from_instance(\n",
     "    project_id=project_id, region=region, instance=instance_id, database=db_name\n",
@@ -177,9 +166,17 @@
     "with engine.connect() as conn:\n",
     "    conn.execute(sqlalchemy.text(f\"DROP TABLE IF EXISTS `{table_name}`\"))\n",
     "    conn.commit()\n",
-    "engine.init_document_table(table_name)\n",
-    "\n",
-    "\n",
+    "engine.init_document_table(table_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "test_docs = [\n",
     "    Document(\n",
     "        page_content=\"Apple Granny Smith 150 0.99 1\",\n",
@@ -195,13 +192,19 @@
     "    ),\n",
     "]\n",
     "saver = MySQLDocumentSaver(engine=engine, table_name=table_name)\n",
-    "\n",
-    "# Save documents\n",
-    "saver.add_documents(test_docs)\n",
+    "saver.add_documents(test_docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with engine.connect() as conn:\n",
     "    result = conn.execute(sqlalchemy.text(f\"select * from `{table_name}`;\"))\n",
     "    print(result.keys())\n",
-    "    print(result.fetchall())"
+    "    print( result.fetchall())"
    ]
   },
   {
@@ -213,21 +216,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded documents: [Document(page_content='Apple Granny Smith 150 0.99 1', metadata={'fruit_id': 1}), Document(page_content='Banana Cavendish 200 0.59 0', metadata={'fruit_id': 2}), Document(page_content='Orange Navel 80 1.29 1', metadata={'fruit_id': 3})]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "loader = MySQLLoader(engine=engine, table_name=table_name)\n",
     "docs = loader.load()\n",
-    "print(\"Loaded documents:\", docs)\n"
+    "for doc in docs:\n",
+    "    print(\"Loaded documents:\", doc)\n"
    ]
   },
   {
@@ -239,21 +235,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded documents: [Document(page_content='Apple Granny Smith 150 0.99 1', metadata={'fruit_id': 1})]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "loader = MySQLLoader(engine=engine, query=f\"select * from `{table_name}` where JSON_EXTRACT(langchain_metadata, '$.fruit_id') = 1;\")\n",
+    "onedoc = loader.load()\n",
+    "print(\"Loaded documents:\", onedoc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Delete documents in default table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loader = MySQLLoader(\n",
+    "    engine=engine,\n",
+    "    table_name=table_name\n",
+    ")\n",
     "docs = loader.load()\n",
-    "print(\"Loaded documents:\", docs)"
+    "print(\"Documents before delete:\", docs)\n",
+    "saver.delete(onedoc)\n",
+    "print(\"Documents after delete:\", loader.load())"
    ]
   },
   {
@@ -267,22 +278,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load documents with customize document page content & metadata"
+    "### Load documents with customized document page content & metadata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Document(page_content='Granny Smith 150 0.99 1', metadata={'fruit_id': 1, 'fruit_name': 'Apple'}), Document(page_content='Cavendish 200 0.59 0', metadata={'fruit_id': 2, 'fruit_name': 'Banana'}), Document(page_content='Navel 80 1.29 1', metadata={'fruit_id': 3, 'fruit_name': 'Orange'})]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with engine.connect() as conn:\n",
     "    conn.execute(sqlalchemy.text(f\"DROP TABLE IF EXISTS `{table_name}`\"))\n",
@@ -312,8 +315,28 @@
     "            \"\"\"\n",
     "        )\n",
     "    )\n",
-    "    conn.commit()\n",
-    "\n",
+    "    conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loader = MySQLLoader(\n",
+    "    engine=engine,\n",
+    "    table_name=table_name,\n",
+    ")\n",
+    "print(loader.load())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "loader = MySQLLoader(\n",
     "    engine=engine,\n",
     "    table_name=table_name,\n",
@@ -337,18 +360,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMKeyView(['page_content', 'fruit_name', 'organic', 'langchain_metadata'])\n",
-      "[('Granny Smith 150 0.99', 'Apple', 1, '{\"fruit_id\": 1}')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with engine.connect() as conn:\n",
     "    conn.execute(sqlalchemy.text(f\"DROP TABLE IF EXISTS `{table_name}`\"))\n",
@@ -370,7 +384,15 @@
     "        ),\n",
     "    ],\n",
     "    store_metadata=True\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "test_docs = [\n",
     "        Document(\n",
     "            page_content=\"Granny Smith 150 0.99\",\n",
@@ -395,23 +417,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Documents before delete [Document(page_content='Granny Smith 150 0.99', metadata={'fruit_id': 1, 'fruit_name': 'Apple', 'organic': 1})]\n",
-      "Documents after delete []\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "loader = MySQLLoader(\n",
     "    engine=engine,\n",
-    "    table_name=table_name,\n",
-    "    metadata_columns=[\"fruit_name\", \"organic\", \"langchain_metadata\"],\n",
+    "    table_name=table_name\n",
     ")\n",
     "docs = loader.load()\n",
     "print(\"Documents before delete:\", docs)\n",
